<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForthActivity"
    tools:ignore="ExtraText"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_200"
    android:backgroundTintMode="src_over">

    <Button
        android:id="@+id/next4"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="85dp"
        android:text="@string/next2"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/previous4"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="85dp"
        android:text="@string/previous"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/question4"
        android:layout_width="379dp"
        android:layout_height="152dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:text="@string/do_you_like_this_caption_for_the_previous_image"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="355dp"
        android:layout_height="369dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:text="@string/textview"
        android:textColor="#004D40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question4" />
</androidx.constraintlayout.widget.ConstraintLayout>