<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_200"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/question2_id"
        android:layout_width="280dp"
        android:layout_height="104dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="98dp"
        android:text="@string/please_enter_your_twitter_api_key"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/APIKey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/APIKey"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="98dp"
        android:background="@drawable/et_style"
        android:hint="@string/enter_here"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/next2"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="179dp"
        android:text="@string/next2"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/previous1"
        app:layout_constraintTop_toBottomOf="@+id/APIKey"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/previous1"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="179dp"
        android:text="@string/previous2"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/APIKey"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>