<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_200"
    android:backgroundTintMode="src_over">

    <TextView
        android:id="@+id/question3_id"
        android:layout_width="399dp"
        android:layout_height="77dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/question3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/next4"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:text="@string/next2"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3_id" />

    <Button
        android:id="@+id/previous2"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="70dp"
        android:text="@string/previous2"
        android:textColor="#7CB342"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3_id" />

    <ImageView
        android:id="@+id/AI_Image"
        android:layout_width="313dp"
        android:layout_height="232dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="74dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question3_id"
        app:srcCompat="@drawable/_f4d8ea7_e9d9_48b7_b70c_819482fb10fb_cover"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>